k8s-configuration/locketapi-deployment.yaml
apiVersion:  apps/v1
kind: Deployment
metadata:
  name: locketapi
  labels:
    app: locketapi
spec:
  replicas: 1 
  selector:
    matchLabels:
      app: locketapi
  template:
    metadata:
      labels:
        app: locketapi
    spec:
      containers:
      - name: locketapi
        image: onionsm/locketapi:1.7
        ports:
        - containerPort: 8081
