k8s-configuration/mongodb-statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: mongodb
spec:
  serviceName: mongodb-service
  replicas: 3
  selector:
    matchLabels:
      app: mongodb
  
  template:
    metadata:
      labels:
        app: mongodb
    spec:
      volumes:
        - name: mongo-storage
          persistentVolumeClaim:
            claimName: pvc-retain-ceph
        - name: keyfile
          secret:
            secretName: mongodb-keyfile
            defaultMode: 0400  

      containers:
      - name: mongodb
        image: mongo:8.0.3
        command:
        - mongod
        - "--bind_ip_all"
        - "--replSet"
        - rs0
        ports:
          - containerPort: 27017
        volumeMounts:
          - name: mongo-storage
            mountPath: /data/db
          - name: keyfile
            mountPath: /etc/mongodb-keyfile
            readOnly: true
        resources:
          requests:
            cpu: "100m"
            memory: "256Mi"
          limits:
            cpu: "1"        
            memory: "1Gi"
