k8s-configuration/locketapi-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: locketapi-service
  labels:
    app: locketapi-service
spec:
  selector:
    app: locketapi
  type: NodePort
  ports:
    - protocol: TCP
      port: 8080  
      targetPort: 8080
      nodePort: 30001
