k8s-configuration/mongodb-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mongodb-service 
spec:
  selector:
    app: mongodb
  ports:
    - name: mongo
      port: 27017
      targetPort: 27017
  clusterIP: None
