k8s-configuration/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mongodb-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: / 
spec:
  rules:
  - host: onion 
    http:
      paths:
      - path: /mongo-express
        pathType: Prefix
        backend:
          service:
            name: mongo-express
            port:
              number: 8081
